@startuml

allowmixing

!if ($standalone)
interface marketplace.Marketplace
interface datastorage.Datastore
interface historical.HistoricalSource
!endif

namespace triggers {

class TriggerSpec {
    name: Optional[str]
    coin: str
    fiat: str
    cooldown_minutes: int
    delay_minutes: Optional[int]
    drop_percentage: Optional[float]
    volume_fiat: Optional[float]
    percentage_fiat: Optional[float]
    start: Optional[datetime.datetime]
    fear_and_greed_index_below: Optional[int]
}

interface Trigger {
    get_name()
    fire()
    has_cooled_off()
    is_triggered()
}

class BuyTrigger implements Trigger

datastorage.Datastore <-- BuyTrigger
marketplace.Marketplace <-- BuyTrigger
historical.HistoricalSource <-- BuyTrigger

interface TriggeredDelegate {
    is_triggered()
}
BuyTrigger --> TriggeredDelegate

interface VolumeFiatDelegate {
    get_volume_fiat()
}
BuyTrigger --> VolumeFiatDelegate

class FixedVolumeFiatDelegate implements VolumeFiatDelegate
class RatioVolumeFiatDelegate implements VolumeFiatDelegate

class DropTriggeredDelegate implements TriggeredDelegate
class TrueTriggeredDelegate implements TriggeredDelegate

class FailureTimeout
BuyTrigger --> FailureTimeout


class CheckinTrigger implements Trigger
class DatabaseCleaningTrigger implements Trigger

datastorage.Datastore <-- DatabaseCleaningTrigger

marketplace.Marketplace <-- RatioVolumeFiatDelegate


class FearAndGreedIndexTriggeredDelegate implements TriggeredDelegate
feargreed.FearAndGreedIndex <-- FearAndGreedIndexTriggeredDelegate

}

@enduml